# qbittorrent-webui-api

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: tests.yaml
src/: client.rs  error.rs  lib.rs  main.rs  models.rs  parames.rs  parameters.rs
src/client/: application.rs  authentication.rs  creator.rs  log.rs  mod.rs  rss.rs  search.rs  sync.rs  torrent.rs  transfer.rs
src/models/: application.rs  creator.rs  log.rs  mod.rs  rss.rs  search.rs  sync.rs  torrent.rs  transfer.rs
src/utiles/deserializers/: mod.rs
tests/: mod.rs
tests/application/: get_directory_contents.rs  mod.rs
tests/authentication/: login_user_pass.rs  mod.rs
tests/sync/: maindata.rs  mod.rs
tests/torrents/: creator.rs  get_torrents.rs  mod.rs  state.rs
