[package]
name = "qbit"
version = "0.1.0"
edition = "2024"
description = "A wrapper for qBittorrent Web API"
keywords = ["qbit", "qbittorrent", "api", "torrent", "torrents", "bittorrent"]
categories = ["api-bindings"]
repository = "https://github.com/Mattress237/qbittorrent-webui-api"
readme = "README.md"

[dependencies]
reqwest = { version = "0.12.19", features = ["json", "cookies", "multipart"] }
tokio = { version = "1.45.1", features = ["full"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
serde_repr = "0.1.20"
url = "2.5.4"
