[package]
name = "qbit"
version = "0.1.2"
edition = "2024"
description = "A wrapper for qBittorrent Web API"
keywords = ["qbit", "qbittorrent", "api", "torrent"]
categories = ["api-bindings"]
repository = "https://github.com/Mattress237/qbittorrent-webui-api"
documentation = "https://docs.rs/qbit"
readme = "README.md"
authors = ["Mattress <mattress@mattress.no>"]
license = "MIT"

[dependencies]
reqwest = { version = "0.12.20", features = ["json", "cookies", "multipart"] }
tokio = { version = "1.45.1", features = ["full"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
serde_repr = "0.1.20"
url = "2.5.4"
reqwest_cookie_store = "0.8.0"
cookie_store = "0.21.1"
