[package]
name = "qbit"
version = "0.1.2"
edition = "2024"
description = "A wrapper for qBittorrent Web API"
keywords = ["qbit", "qbittorrent", "api", "torrent"]
categories = ["api-bindings"]
repository = "https://github.com/Mattress237/qbittorrent-webui-api"
documentation = "https://docs.rs/qbit"
readme = "README.md"
authors = ["Mattress <mattress@mattress.no>"]
license = "MIT"

[dependencies]
reqwest = { version = "0.12.23", features = ["json", "multipart"] }
tokio = { version = "1.47.1", features = ["sync"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
serde_repr = "0.1.20"
url = "2.5.7"
derive_builder = "0.20.2"
bytes = "1.10.1"

[dev-dependencies]
tokio = { version = "1.47.1", features = ["macros", "rt-multi-thread"] }
dotenv = "0.15.0"
rand = "0.9.2"

[lints.clippy]
uninlined_format_args = "allow"

[lints.rust]
# missing_docs = "deny"
